# bf6-stats-pipeline-

./: .gitignore  README.md  config.example.yaml  main.py  push-to-github.ps1  pyproject.toml  requirements.txt
.cursor/rules/: deploy-to-github.mdc
src/: __init__.py  api.py  pipeline.py  storage.py
